# C371-Raytracer

./: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Driver.cpp  GeometricObject.cpp  GeometricObject.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MeshTriangle.cpp  MeshTriangle.h  Plane.cpp  Plane.h  README.md  Ray.h  ShadeInfo.cpp  ShadeInfo.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  enums.h  main.cpp  objloader.h  scene_loader.h
scene/: evaluate_scene5.txt  evaluate_scene6.txt  scene1.txt  scene3_lower.txt  scene3_noplane.txt  scene5.txt  sceneCUSTOM.txt  sceneCube.txt  sceneMap.txt  scenefish.txt
